--- a/coupon-analysis.ipynb
+++ b/coupon-analysis.ipynb
@@ -1633,6 +1633,354 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['21', '46', '26', '31', '41', '50plus', '36', 'below21'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_bar.age.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>maritalStatus</th>\n",
+       "      <th>age</th>\n",
+       "      <th>income</th>\n",
+       "      <th>passanger</th>\n",
+       "      <th>Bar</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>RestaurantLessThan20</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3391</th>\n",
+       "      <td>Married partner</td>\n",
+       "      <td>50plus</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Protective Service</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11195</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>less1</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6811</th>\n",
+       "      <td>Unmarried partner</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Unemployed</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1642</th>\n",
+       "      <td>Married partner</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Kid(s)</td>\n",
+       "      <td>1~3</td>\n",
+       "      <td>Unemployed</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9715</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>46</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Office &amp; Administrative Support</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6531</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>below21</td>\n",
+       "      <td>Less than $12500</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>1~3</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5027</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>21</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>less1</td>\n",
+       "      <td>Computer &amp; Mathematical</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4293</th>\n",
+       "      <td>Unmarried partner</td>\n",
+       "      <td>21</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>1~3</td>\n",
+       "      <td>Education&amp;Training&amp;Library</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11173</th>\n",
+       "      <td>Unmarried partner</td>\n",
+       "      <td>below21</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Education&amp;Training&amp;Library</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4493</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$25000 - $37499</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Unemployed</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752</th>\n",
+       "      <td>Married partner</td>\n",
+       "      <td>50plus</td>\n",
+       "      <td>$25000 - $37499</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>1~3</td>\n",
+       "      <td>Healthcare Support</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12262</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Less than $12500</td>\n",
+       "      <td>Friend(s)</td>\n",
+       "      <td>1~3</td>\n",
+       "      <td>Unemployed</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3428</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Friend(s)</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>Office &amp; Administrative Support</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5053</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>21</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>less1</td>\n",
+       "      <td>Computer &amp; Mathematical</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7646</th>\n",
+       "      <td>Married partner</td>\n",
+       "      <td>50plus</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Friend(s)</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11498</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>below21</td>\n",
+       "      <td>$12500 - $24999</td>\n",
+       "      <td>Friend(s)</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>Student</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8394</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>50plus</td>\n",
+       "      <td>$25000 - $37499</td>\n",
+       "      <td>Friend(s)</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Installation Maintenance &amp; Repair</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12178</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>26</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>Unemployed</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3394</th>\n",
+       "      <td>Married partner</td>\n",
+       "      <td>50plus</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Partner</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Protective Service</td>\n",
+       "      <td>gt8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7189</th>\n",
+       "      <td>Single</td>\n",
+       "      <td>46</td>\n",
+       "      <td>$37500 - $49999</td>\n",
+       "      <td>Alone</td>\n",
+       "      <td>never</td>\n",
+       "      <td>Computer &amp; Mathematical</td>\n",
+       "      <td>4~8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           maritalStatus      age            income  passanger    Bar  \\\n",
+       "3391     Married partner   50plus   $37500 - $49999    Partner  never   \n",
+       "11195             Single       26   $12500 - $24999      Alone  less1   \n",
+       "6811   Unmarried partner       26   $12500 - $24999      Alone  never   \n",
+       "1642     Married partner       26   $37500 - $49999     Kid(s)    1~3   \n",
+       "9715              Single       46   $37500 - $49999      Alone  never   \n",
+       "6531              Single  below21  Less than $12500      Alone    1~3   \n",
+       "5027              Single       21   $12500 - $24999      Alone  less1   \n",
+       "4293   Unmarried partner       21   $12500 - $24999    Partner    1~3   \n",
+       "11173  Unmarried partner  below21   $37500 - $49999      Alone  never   \n",
+       "4493              Single       26   $25000 - $37499      Alone  never   \n",
+       "752      Married partner   50plus   $25000 - $37499    Partner    1~3   \n",
+       "12262             Single       26  Less than $12500  Friend(s)    1~3   \n",
+       "3428              Single       26   $37500 - $49999  Friend(s)    4~8   \n",
+       "5053              Single       21   $12500 - $24999      Alone  less1   \n",
+       "7646     Married partner   50plus   $37500 - $49999  Friend(s)  never   \n",
+       "11498             Single  below21   $12500 - $24999  Friend(s)    gt8   \n",
+       "8394              Single   50plus   $25000 - $37499  Friend(s)  never   \n",
+       "12178             Single       26   $37500 - $49999      Alone    gt8   \n",
+       "3394     Married partner   50plus   $37500 - $49999    Partner  never   \n",
+       "7189              Single       46   $37500 - $49999      Alone  never   \n",
+       "\n",
+       "                              occupation RestaurantLessThan20  Y  \n",
+       "3391                  Protective Service                  gt8  0  \n",
+       "11195                            Student                  gt8  1  \n",
+       "6811                          Unemployed                  4~8  0  \n",
+       "1642                          Unemployed                  4~8  0  \n",
+       "9715     Office & Administrative Support                  4~8  1  \n",
+       "6531                             Student                  gt8  1  \n",
+       "5027             Computer & Mathematical                  gt8  1  \n",
+       "4293          Education&Training&Library                  4~8  0  \n",
+       "11173         Education&Training&Library                  gt8  0  \n",
+       "4493                          Unemployed                  4~8  0  \n",
+       "752                   Healthcare Support                  4~8  0  \n",
+       "12262                         Unemployed                  4~8  1  \n",
+       "3428     Office & Administrative Support                  4~8  1  \n",
+       "5053             Computer & Mathematical                  gt8  1  \n",
+       "7646                             Retired                  4~8  0  \n",
+       "11498                            Student                  4~8  1  \n",
+       "8394   Installation Maintenance & Repair                  gt8  0  \n",
+       "12178                         Unemployed                  gt8  1  \n",
+       "3394                  Protective Service                  gt8  0  \n",
+       "7189             Computer & Mathematical                  4~8  0  "
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# - go to bars more than once a month, had passengers that were not a kid, and were not widowed *OR*\n",
+    "# - go to bars more than once a month and are under the age of 30 *OR*\n",
+    "# - go to cheap restaurants more than 4 times a month and income is less than 50K.\n",
+    "df = data_bar[[\"maritalStatus\",\"age\",\"income\",\"passanger\",\"Bar\",\"occupation\",\"RestaurantLessThan20\",\"Y\"]].copy()\n",
+    "condition1 = (df.Bar.isin(['1~3', '4~8', 'gt8'])) & (df.passanger != 'Kid(s)') & (df.maritalStatus != 'Widowed')\n",
+    "condition2 = (df.Bar.isin(['1~3', '4~8', 'gt8'])) & (df.age.isin(['21', 'below21']))\n",
+    "condition3 = (df.RestaurantLessThan20.isin(['4~8', 'gt8'])) & (df.income.isin(['$12500 - $24999', \n",
+    "        '$37500 - $49999', '$25000 - $37499', 'Less than $12500']))\n",
+    "group1 = df[condition1]\n",
+    "group2 = df[condition2]\n",
+    "group3 = df[condition3]\n",
+    "#group3.sample(20)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "v3fL3QkO_qRK"
